--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-native-web": "~0.19.6",
     "expo-blur": "~12.9.2",
     "react-native-gesture-handler": "~2.14.0",
-    "expo-dev-client": "~3.3.11"
+    "expo-dev-client": "~3.3.11",
+    "expo-av": "~13.10.5",
+    "expo-asset": "~9.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
