--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@clerk/clerk-expo": "^0.20.16",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@tanstack/react-query": "^5.29.2",
     "expo": "~50.0.14",
     "expo-asset": "~9.0.2",
     "expo-av": "~13.10.5",
     "expo-blur": "~12.9.2",
     "expo-dev-client": "~3.3.11",
+    "expo-dynamic-app-icon": "^1.2.0",
     "expo-font": "~11.10.3",
+    "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
     "expo-router": "~3.4.8",
     "expo-secure-store": "~12.8.1",
@@ -34,6 +37,7 @@
     "react-native": "0.73.6",
     "react-native-confirmation-code-field": "^7.4.0",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-mmkv": "^2.12.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
