--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "@tanstack/react-query": "^5.29.2",
+    "date-fns": "^3.6.0",
     "expo": "~50.0.14",
     "expo-asset": "~9.0.2",
     "expo-av": "~13.10.5",
@@ -41,7 +42,11 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "victory-native": "^40.1.0",
+    "expo-haptics": "~12.8.1",
+    "expo-local-authentication": "~13.8.0",
+    "@shopify/react-native-skia": "0.1.221"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
