--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@clerk/clerk-expo": "^0.20.16",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/react-native-skia": "0.1.221",
     "@tanstack/react-query": "^5.29.2",
     "date-fns": "^3.6.0",
     "expo": "~50.0.14",
@@ -25,8 +26,10 @@
     "expo-dev-client": "~3.3.11",
     "expo-dynamic-app-icon": "^1.2.0",
     "expo-font": "~11.10.3",
+    "expo-haptics": "~12.8.1",
     "expo-image-picker": "~14.7.1",
     "expo-linking": "~6.2.2",
+    "expo-local-authentication": "~13.8.0",
     "expo-router": "~3.4.8",
     "expo-secure-store": "~12.8.1",
     "expo-splash-screen": "~0.26.4",
@@ -43,10 +46,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-web": "~0.19.6",
-    "victory-native": "^40.1.0",
-    "expo-haptics": "~12.8.1",
-    "expo-local-authentication": "~13.8.0",
-    "@shopify/react-native-skia": "0.1.221"
+    "victory-native": "^40.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
