--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.16",
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-menu/menu": "^1.0.0",
     "@react-navigation/native": "^6.0.2",
     "@shopify/react-native-skia": "0.1.221",
     "@tanstack/react-query": "^5.29.2",
