--- a/app.json
+++ b/app.json
@@ -1,41 +1,55 @@
 {
-  "expo": {
-    "name": "fintech",
-    "slug": "fintech",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
-    "userInterfaceStyle": "automatic",
-    "splash": {
-      "image": "./assets/images/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": ["**/*"],
-    "ios": {
-      "supportsTablet": true,
-      "bundleIdentifier": "com.anonymous.fintech"
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
-      },
-      "package": "com.anonymous.fintech"
-    },
-    "web": {
-      "bundler": "metro",
-      "output": "server",
-      "favicon": "./assets/images/favicon.png"
-    },
-    "plugins": [
-      ["expo-router", { "origin": "http://172.16.100.126:8081" }],
-      "expo-secure-store",
-      "expo-dynamic-app-icon"
-    ],
-    "experiments": {
-      "typedRoutes": true
+    "expo": {
+        "name": "fintech",
+        "slug": "fintech",
+        "version": "1.0.0",
+        "orientation": "portrait",
+        "icon": "./assets/images/icon.png",
+        "scheme": "myapp",
+        "userInterfaceStyle": "automatic",
+        "splash": {
+            "image": "./assets/images/splash.png",
+            "resizeMode": "contain",
+            "backgroundColor": "#ffffff"
+        },
+        "assetBundlePatterns": ["**/*"],
+        "ios": {
+            "supportsTablet": true,
+            "bundleIdentifier": "com.anonymous.fintech"
+        },
+        "android": {
+            "adaptiveIcon": {
+                "foregroundImage": "./assets/images/adaptive-icon.png",
+                "backgroundColor": "#ffffff"
+            },
+            "package": "com.anonymous.fintech"
+        },
+        "web": {
+            "bundler": "metro",
+            "output": "server",
+            "favicon": "./assets/images/favicon.png"
+        },
+        "plugins": [
+            ["expo-router", { "origin": "http://172.16.100.126:8081" }],
+            "expo-secure-store",
+            "expo-dynamic-app-icon",
+            {
+                "default": {
+                    "image": "./assets/images/icon.png",
+                    "prerendered": true
+                },
+                "dark": {
+                    "image": "./assets/images/icon-dark.png",
+                    "prerendered": true
+                },
+                "vivid": {
+                    "image": "./assets/images/icon-vivid.png",
+                    "prerendered": true
+                }
+            }
+        ],
+        "experiments": {
+            "typedRoutes": true
+        }
     }
-  }
 }
