The default name in dynamic app icon is causing problem in Android. Renamed.

--- a/app.json
+++ b/app.json
@@ -35,7 +35,7 @@
             [
                 "expo-dynamic-app-icon",
                 {
-                    "default": {
+                    "normal": {
                         "image": "./assets/images/icon.png",
                         "prerendered": true
                     },
